# rf_detr_ros_cpp

./: README.md
.github/workflows/: ci_jazzy.yml
rf_detr_cpp/: CMakeLists.txt  package.xml
rf_detr_cpp/include/rf_detr_cpp/: coco_names.hpp  config.h.in  core.hpp  rf_detr.hpp  rf_detr_openvino.hpp  utils.hpp
rf_detr_cpp/src/: rf_detr_openvino.cpp
rf_detr_ros_cpp/: CMakeLists.txt  package.xml
rf_detr_ros_cpp/include/rf_detr_ros_cpp/: rf_detr_ros_cpp.hpp
rf_detr_ros_cpp/labels/: coco_names.txt
rf_detr_ros_cpp/launch/: rf_detr_openvino.launch.py
rf_detr_ros_cpp/src/: rf_detr_ros_cpp.cpp
weights/rf_detr/: download_openvino.bash
